# Study-Buddy-C.S2-Lab-project

./: CMakeLists.txt  StudyBuddy.pro  chatcontroller.cpp  chatcontroller.h  chatselectionwindow.cpp  chatselectionwindow.h  chatselectionwindow.ui  chatwindow.cpp  chatwindow.h  chatwindow.ui  clientcontroller.cpp  clientcontroller.h  courseselectionwindow.cpp  courseselectionwindow.h  courseselectionwindow.ui  desktop.ini  ichatclient.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mocknetworkclient.h  networkclient.h  qtnetworkclient.cpp  qtnetworkclient.h  test_chatcontroller.cpp  test_chatwindow.cpp  testclientcontroller.cpp  testclientcontroller.h
